src/test/deca/context/invalid/tests/douDecl_method_01_so.deca
class A{
    int x;
    int getX(){
    return x;
    }

    int getX(){
    return 2*x;
    }
}// Description: // Teste l'affectation et la conversion int -> float. // // Resultats: // Ligne 12: Not expected type // // Historique: // cree le 13/01/2023
